<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:id="@+id/rv_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@android:color/darker_gray" />

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_item_photo"
            android:layout_toRightOf="@+id/img_item_photo"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/nama_provinsi"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nama_provinsi"/>

            <TextView
                android:text="@string/kasus_positif"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_positive"/>

            <TextView
                android:text="@string/jumlah_sembuh"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_sembuh"/>
            <TextView
                android:text="@string/jumlah_meninggal"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_meninggal"/>

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>